--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -28,9 +28,9 @@ En esta sección vas a ver las partes visibles de Mmeter.
 
 ### Vista frontal
 
-<a href="/img/parts_top.jpg" target="_blank" rel="noreferrer">
+<a href="/img/intro/parts_top.jpg" target="_blank" rel="noreferrer">
   <img
-    src="/img/parts_top.jpg"
+    src="/img/intro/parts_top.jpg"
     alt="Mmeter – Partes (vista frontal)"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -44,9 +44,9 @@ En esta sección vas a ver las partes visibles de Mmeter.
 
 ### Vista trasera
 
-<a href="/img/parts_bottom.jpg" target="_blank" rel="noreferrer">
+<a href="/img/intro/parts_bottom.jpg" target="_blank" rel="noreferrer">
   <img
-    src="/img/parts_bottom.jpg"
+    src="/img/intro/parts_bottom.jpg"
     alt="Mmeter – Partes (vista trasera)"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -63,9 +63,9 @@ En esta sección vas a ver las partes visibles de Mmeter.
 
 ## Mediciones ambientales
 
-<a href="/img/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
   <img
-    src="/img/app_temp.jpg"
+    src="/img/intro/app_temp.jpg"
     alt="Mmeter – Mediciones ambientales en la app"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -87,9 +87,9 @@ Los valores se actualizan de manera periódica y se visualizan en tiempo real de
 
 ## Alertas y notificaciones
 
-<a href="/img/app_push.jpg" target="_blank" rel="noreferrer">
+<a href="/img/intro/app_push.jpg" target="_blank" rel="noreferrer">
   <img
-    src="/img/app_push.jpg"
+    src="/img/intro/app_push.jpg"
     alt="Mmeter – Alertas y notificaciones"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -111,7 +111,7 @@ Esto permite actuar a tiempo sin necesidad de revisar los valores constantemente
 ## Conectividad y funcionamiento continuo
 
 <img
-  src="/img/mmeter.jpg"
+  src="/img/intro/mmeter.jpg"
   alt="Mmeter – Funcionamiento continuo"
   className="mm-feature-img"
   style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -144,6 +144,63 @@ Para funcionar correctamente, Mmeter necesita:
 - Red Wi-Fi de **2.4 GHz**
 - Conexión a Internet doméstica o similar
 - Redes sin portales cautivos ni autenticación mediante navegador
+
+---
+
+## Especificaciones técnicas
+
+Estas son las características técnicas actuales de Mmeter (pueden ajustarse en futuras versiones del producto).
+
+### Temperatura y humedad
+
+- **Rango de temperatura:** **-40 °C a 85 °C**
+- **Precisión de temperatura:** **± 1,0 °C** (típica)
+- **Rango de humedad:** **0 % a 100 % HR**
+- **Precisión de humedad:** **± 3 % HR** (típica)
+
+La temperatura y la humedad se utilizan para la visualización ambiental y para el cálculo automático del **VPD** en la app.
+
+---
+
+### Medición de luz
+
+- **Tipo de medición:** intensidad de luz
+- **Medición combinada:** luz visible e infrarroja
+- **Salida:** valor de intensidad procesado y mostrado en la app
+
+La medición de luz es **referencial** y está pensada para seguir cambios de iluminación.  
+No se trata de una medición espectral ni de PPFD. Se evaluara esta funcionalidad en la proxima version
+
+---
+
+### Conectividad
+
+- **Wi-Fi:** **2.4 GHz**
+- **Alcance:** dependiente del entorno (paredes, distancia e interferencias)
+- **Uso previsto:** redes Wi-Fi domésticas
+
+---
+
+### Alimentación
+
+- **Alimentación:** **5 V por USB**
+- **Funcionamiento:** continuo mientras esté conectado
+- **Batería interna:** no posee
+
+---
+
+### Montaje
+
+- **Sistema de montaje:** colgado mediante cable
+
+---
+
+### Dimensiones
+
+- **Alto:** **120 mm**
+- **Ancho:** **64 mm**
+- **Profundidad:** **20 mm**
+- **Peso:** a definir
 
 ---
 
