--- a/docs/puesta-en-marcha.mdx
+++ b/docs/puesta-en-marcha.mdx
@@ -1,23 +1,29 @@
 import Callout from '../src/components/Callout';
 
-
 # Puesta en marcha
 
 En esta sección vas a dejar Mmeter listo para empezar a medir y mostrar datos en la app.
+
+> ⚠️ **Importante:**  
+> La primera vez que se enciende, Mmeter **necesita conectarse a una red Wi-Fi**.  
+> Hasta que no se cargan las credenciales de red, **el equipo no comienza a medir**.
 
 ---
 
 ## 1. Encender Mmeter
 
 1. Conectá Mmeter a la alimentación.
-2. Esperá a que termine el inicio.
-3. Mantenelo encendido durante la configuración inicial.
+2. El equipo se enciende automáticamente.
+3. Esperá a que termine el inicio.
+
+En este punto, Mmeter **todavía no mide** si no tiene una red Wi-Fi configurada.
 
 > Si lo desconectás durante el arranque, puede tardar más en quedar listo.
 
 ---
 
 ## 2. Conectar Mmeter a tu Wi-Fi desde la app
+
 <Callout type="info" title="Video de referencia">
 Este video muestra el concepto general de conexión.
 Próximamente habrá un video específico paso a paso para la conexión a Wi-Fi.
@@ -33,13 +39,15 @@ Próximamente habrá un video específico paso a paso para la conexión a Wi-Fi.
   allowFullScreen
 />
 
-
 1. Abrí la app.
 2. Iniciá el proceso de conexión.
 3. Seleccioná tu red Wi-Fi e ingresá la contraseña.
 4. Esperá a que finalice la vinculación.
 
-Cuando termina, Mmeter queda asociado a tu red y vas a poder verlo desde la app.
+Cuando el proceso termina:
+- Mmeter guarda las credenciales de red.
+- Se conecta a Internet.
+- **Comienza a medir y enviar datos**.
 
 ---
 
@@ -48,20 +56,26 @@ Cuando termina, Mmeter queda asociado a tu red y vas a poder verlo desde la app.
 Vas a notar que Mmeter está listo cuando:
 
 - Se muestran lecturas en la app.
-- Las lecturas se actualizan automáticamente.
+- Los valores se actualizan automáticamente.
 
-Si todavía no aparecen datos, esperá unos segundos y volvé a intentar.
+Si todavía no aparecen datos:
+- Esperá unos segundos.
+- Verificá que la conexión Wi-Fi sea correcta.
 
 ---
 
 ## 4. Qué pasa si se corta la conexión
 
-Si la conexión a Internet se pierde, **Mmeter se reinicia automáticamente** y queda esperando hasta que la conexión vuelva.
+Si la conexión a Internet se pierde:
 
-Cuando la conexión se restablece, Mmeter se reconecta y continúa funcionando.
+- Mmeter se reinicia automáticamente.
+- Queda esperando que la red vuelva.
+
+Cuando la conexión se restablece, Mmeter se reconecta y continúa funcionando sin intervención del usuario.
 
 ---
 
 ## ¿Qué sigue?
 
 ➡️ Continuar con **[Uso diario](./uso-diario.md)**
+
