errores y uso-diario

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -200,7 +200,7 @@ No se trata de una medición espectral ni de PPFD. Se evaluara esta funcionalida
 - **Alto:** **120 mm**
 - **Ancho:** **64 mm**
 - **Profundidad:** **20 mm**
-- **Peso:** a definir
+- **Peso:** **75 g**
 
 ---
 
