--- a/docs/puesta-en-marcha.mdx
+++ b/docs/puesta-en-marcha.mdx
@@ -10,6 +10,40 @@ En esta sección vas a dejar Mmeter listo para empezar a medir y mostrar datos e
 
 ---
 
+## 0. Descargar la app (Blynk)
+
+Para vincular Mmeter y cargar la red Wi-Fi, necesitás tener instalada la app **Blynk IoT**.
+
+<Callout type="tip" title="Descarga rápida">
+Escaneá el QR según tu teléfono para instalar la app.
+</Callout>
+
+<div className="mm-qr-grid">
+  <div className="mm-qr-card">
+    <strong>Android</strong>
+    <img src="/img/qr/blynk_android.jpg" alt="QR descarga Blynk IoT (Android)" className="mm-qr" />
+    <div className="mm-qr-links">
+      <a href="https://play.google.com/store/apps/details?id=cloud.blynk" target="_blank" rel="noreferrer">
+        Abrir en Google Play
+      </a>
+    </div>
+  </div>
+
+  <div className="mm-qr-card">
+    <strong>iPhone (iOS)</strong>
+    <img src="/img/qr/blynk_ios.jpg" alt="QR descarga Blynk IoT (iOS)" className="mm-qr" />
+    <div className="mm-qr-links">
+      <a href="https://apps.apple.com/app/blynk-iot/id1559317868" target="_blank" rel="noreferrer">
+        Abrir en App Store
+      </a>
+    </div>
+  </div>
+</div>
+
+> Si ya tenés Blynk instalada, podés pasar al siguiente paso.
+
+---
+
 ## 1. Encender Mmeter
 
 1. Conectá Mmeter a la alimentación.
@@ -78,4 +112,3 @@ Cuando la conexión se restablece, Mmeter se reconecta y continúa funcionando s
 ## ¿Qué sigue?
 
 ➡️ Continuar con **[Uso diario](./uso-diario.md)**
-
