--- a/docs/ayuda/troubleshooting.mdx
+++ b/docs/ayuda/troubleshooting.mdx
@@ -4,3 +4,5 @@ Problemas frecuentes y cómo resolverlos.
 
 - Error al compilar: revisar rutas de imágenes y componentes
 - Video no se ve: usar URL de embed `youtube.com/embed/...`
+
+Para mensajes de error del equipo, estados del LED y fallas de sensores, consultá la sección **[Errores](/docs/uso-meter/errores)**.
