--- a/docs/empezar/intro.mdx
+++ b/docs/empezar/intro.mdx
@@ -208,4 +208,4 @@ No se trata de una medición espectral ni de PPFD. Se evaluara esta funcionalida
 
 Ahora que conocés las características de Mmeter, el siguiente paso es **ponerlo en marcha y conectarlo a tu red**.
 
-➡️ Continuar con **[Puesta en marcha](./puesta-en-marcha.mdx)**
+➡️ Continuar con **[Puesta en marcha](/docs/empezar/puesta-en-marcha)**
