--- a/docs/empezar/puesta-en-marcha.mdx
+++ b/docs/empezar/puesta-en-marcha.mdx
@@ -1,4 +1,5 @@
-import Callout from '../src/components/Callout';
+import Callout from '@site/src/components/Callout';
+
 
 # Puesta en marcha
 
@@ -111,4 +112,5 @@ Cuando la conexión se restablece, Mmeter se reconecta y continúa funcionando s
 
 ## ¿Qué sigue?
 
-➡️ Continuar con **[Uso diario](./uso-diario.md)**
+➡️ Continuar con **[Uso diario](/docs/empezar/uso-diario)**
+
