--- a/docs/empezar/uso-diario.mdx
+++ b/docs/empezar/uso-diario.mdx
@@ -69,8 +69,10 @@ Las notificaciones permiten al usuario estar informado del estado de las medicio
 Existe un evento de **encendido del equipo (power-up)**.
 Este evento es **configurable** y **no se encuentra activo por defecto**.
 
-La configuración de este evento se explica en la sección de **configuración avanzada**.
+La configuración de este evento se explica en la sección de **[Configuración avanzada](/docs/config-avanzada)**.
+
 
 ---
 
-Para conocer el significado de mensajes y advertencias, consultar la sección **Errores**.
+Para conocer el significado de mensajes y advertencias, consultar la sección **[Errores](/docs/uso-meter/errores)**.
+
