--- a/docs/uso-meter/configuracion-basica.mdx
+++ b/docs/uso-meter/configuracion-basica.mdx
@@ -1,4 +1,5 @@
-import Callout from '../src/components/Callout';
+import Callout from '@site/src/components/Callout';
+
 
 # Configuración básica
 
@@ -245,4 +246,5 @@ Para eso existen otras secciones de la guía.
 
 Una vez finalizada la configuración básica y luego de volver a **modo Medición**, el equipo aplica los cambios y opera normalmente.
 
-➡️ Continuar con **[Uso diario](./uso-diario.md)**
+➡️ Continuar con **[Uso diario](/docs/empezar/uso-diario)**
+
