--- a/docs/config-avanzada/configuracion-equipo.mdx
+++ b/docs/config-avanzada/configuracion-equipo.mdx
@@ -2,6 +2,15 @@ import Callout from '@site/src/components/Callout';
 
 # Configuración del equipo
 
+<a href="/img/cfg_avanzada/cfg_mobile.jpg" target="_blank" rel="noreferrer">
+  <img
+    src="/img/cfg_avanzada/cfg_mobile.jpg"
+    alt="Mmeter – Partes (vista frontal)"
+    className="mm-feature-img"
+    style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
+  />
+</a>
+
 En esta sección se describen los parámetros disponibles en la **interfaz web de configuración** (modo **CFG**).
 
 > ⚠️ **Importante**  
@@ -13,6 +22,8 @@ La interfaz de configuración avanzada es una **página web responsive**.
 Se puede acceder tanto desde un **navegador en computadora (desktop)** como desde un **teléfono móvil (mobile)**, usando la IP del equipo.
 </Callout>
 
+
+
 <Callout type="info" title="Guardar y aplicar cambios">
 Los parámetros se **guardan desde esta página web** usando el botón **Guardar**.  
 Los cambios **no entran en funcionamiento** hasta que el equipo vuelve a **modo Medición** desde la app.
@@ -22,9 +33,9 @@ Los cambios **no entran en funcionamiento** hasta que el equipo vuelve a **modo 
 
 ## Interfaz web (referencia)
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/mmeter_http2.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/mmeter_http2.png"
     alt="Mmeter – Configuración avanzada (interfaz web)"
     className="mm-feature-img"
     style={{ margin: "0 0 1.5rem 0" }}
@@ -41,9 +52,9 @@ La interfaz está organizada en secciones. A continuación se detalla qué signi
 
 ## Básicos
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/basicos.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/basicos.png"
     alt="Mmeter – Configuración avanzada – Básicos"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -93,9 +104,9 @@ Controla si el equipo envía eventos al iniciar:
 
 ## Temperatura (°C)
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/temp.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/temp.png"
     alt="Mmeter – Configuración avanzada – Temperatura"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -115,9 +126,9 @@ Define los límites de temperatura para **día** y **noche**. Estos valores se u
 
 ## Humedad (%)
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/hum.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/hum.png"
     alt="Mmeter – Configuración avanzada – Humedad"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -139,9 +150,9 @@ Define los límites de humedad para **día** y **noche**.
 
 ## Luz
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/Luz.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/luz.png"
     alt="Mmeter – Configuración avanzada – Luz"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -171,9 +182,9 @@ De día se usa **%**, de noche se usa **lux**.
 
 ## VPD (kPa)
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/vpd.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/vpd.png"
     alt="Mmeter – Configuración avanzada – VPD"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -196,9 +207,9 @@ Valores de VPD para control por **día** y **noche**, más un target de referenc
 
 ## Horarios
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/horarios.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/horarios.png"
     alt="Mmeter – Configuración avanzada – Horarios"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -216,9 +227,9 @@ Define el inicio de período **día** y **noche**.
 
 ## Histeresis
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/hys.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/hys.png"
     alt="Mmeter – Configuración avanzada – Histéresis"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -243,9 +254,9 @@ En luz: **día en %** y **noche en lux**.
 
 ## Flags / Info
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/flags.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/flags.png"
     alt="Mmeter – Configuración avanzada – Flags e información"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -264,9 +275,9 @@ Correo electrónico donde se enviarán notificaciones asociadas a eventos del si
 
 ## Estado del dispositivo (RO)
 
-<a href="/img/intro/app_temp.jpg" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/ro.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_temp.jpg"
+    src="/img/cfg_avanzada/ro.png"
     alt="Mmeter – Configuración avanzada – Estado del dispositivo"
     className="mm-feature-img"
     style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
@@ -299,7 +310,7 @@ Luego es necesario volver a **modo Medición** desde la app para aplicar los cam
 Este video muestra el uso de la configuración avanzada desde un navegador en computadora.
 
 <video controls width="100%" style={{ maxWidth: "900px" }}>
-  <source src="/video/config-avanzada.mp4" type="video/mp4" />
+  <source src="/video/cfg.mp4" type="video/mp4" />
   Tu navegador no soporta la reproducción de video.
 </video>
 
