--- a/docs/config-avanzada/index.mdx
+++ b/docs/config-avanzada/index.mdx
@@ -49,6 +49,16 @@ Para aplicar los cambios y volver al funcionamiento normal, cambiá nuevamente e
 
 ## Acceso desde el navegador
 
+
+<a href="/img/cfg_avanzada/mmeter_http.png" target="_blank" rel="noreferrer">
+  <img
+    src="/img/cfg_avanzada/mmeter_http.png"
+    alt="Mmeter – Partes (vista frontal)"
+    className="mm-feature-img"
+    style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
+  />
+</a>
+
 Mmeter incluye una **interfaz web interna** accesible desde un navegador.
 
 La dirección IP necesaria se muestra en la app, dentro de la sección **Información**, cuando el equipo está en **modo Medición** o **modo CFG**.
