--- a/docs/empezar/puesta-en-marcha.mdx
+++ b/docs/empezar/puesta-en-marcha.mdx
@@ -59,20 +59,6 @@ En este punto, Mmeter **todavía no mide** si no tiene una red Wi-Fi configurada
 
 ## 2. Conectar Mmeter a tu Wi-Fi desde la app
 
-<Callout type="info" title="Video de referencia">
-Este video muestra el concepto general de conexión.
-Próximamente habrá un video específico paso a paso para la conexión a Wi-Fi.
-</Callout>
-
-<iframe
-  width="100%"
-  height="400"
-  src="https://www.youtube.com/embed/YdloKCMfLUs"
-  title="Mmeter – Conexión inicial"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
 
 1. Abrí la app.
 2. Iniciá el proceso de conexión.
@@ -83,6 +69,59 @@ Cuando el proceso termina:
 - Mmeter guarda las credenciales de red.
 - Se conecta a Internet.
 - **Comienza a medir y enviar datos**.
+
+<a
+  href="/video/cfg_card.mp4"
+  target="_blank"
+  rel="noreferrer"
+  style={{
+    display: "inline-block",
+    position: "relative",
+    maxWidth: "260px",
+    margin: "1rem 0"
+  }}
+>
+  <img
+    src="/video/mmeter.jpg"
+    alt="Conectar Mmeter a Wi-Fi desde la app"
+    style={{
+      width: "100%",
+      borderRadius: "12px",
+      display: "block"
+    }}
+  />
+
+  {/* Botón Play */}
+  <div
+    style={{
+      position: "absolute",
+      top: "50%",
+      left: "50%",
+      transform: "translate(-50%, -50%)",
+      width: "56px",
+      height: "56px",
+      background: "rgba(0,0,0,0.6)",
+      borderRadius: "50%",
+      display: "flex",
+      alignItems: "center",
+      justifyContent: "center"
+    }}
+  >
+    <div
+      style={{
+        marginLeft: "4px",
+        width: 0,
+        height: 0,
+        borderTop: "10px solid transparent",
+        borderBottom: "10px solid transparent",
+        borderLeft: "16px solid white"
+      }}
+    />
+  </div>
+</a>
+
+
+
 
 ---
 
