--- a/docs/config-avanzada/configuracion-equipo.mdx
+++ b/docs/config-avanzada/configuracion-equipo.mdx
@@ -131,7 +131,7 @@ Define los límites de temperatura para **día** y **noche**. Estos valores se u
     src="/img/cfg_avanzada/hum.png"
     alt="Mmeter – Configuración avanzada – Humedad"
     className="mm-feature-img"
-    style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
+    style={{ float: "right", margin: "0 1.5rem 1.5rem 0" }}
   />
 </a>
 
@@ -150,7 +150,7 @@ Define los límites de humedad para **día** y **noche**.
 
 ## Luz
 
-<a href="/img/cfg_avanzada/Luz.png" target="_blank" rel="noreferrer">
+<a href="/img/cfg_avanzada/luz.png" target="_blank" rel="noreferrer">
   <img
     src="/img/cfg_avanzada/luz.png"
     alt="Mmeter – Configuración avanzada – Luz"
@@ -187,7 +187,7 @@ De día se usa **%**, de noche se usa **lux**.
     src="/img/cfg_avanzada/vpd.png"
     alt="Mmeter – Configuración avanzada – VPD"
     className="mm-feature-img"
-    style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
+    style={{ float: "right", margin: "0 1.5rem 1.5rem 0" }}
   />
 </a>
 
@@ -232,7 +232,7 @@ Define el inicio de período **día** y **noche**.
     src="/img/cfg_avanzada/hys.png"
     alt="Mmeter – Configuración avanzada – Histéresis"
     className="mm-feature-img"
-    style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
+    style={{ float: "right", margin: "0 1.5rem 1.5rem 0" }}
   />
 </a>
 
@@ -280,7 +280,7 @@ Correo electrónico donde se enviarán notificaciones asociadas a eventos del si
     src="/img/cfg_avanzada/ro.png"
     alt="Mmeter – Configuración avanzada – Estado del dispositivo"
     className="mm-feature-img"
-    style={{ float: "left", margin: "0 1.5rem 1.5rem 0" }}
+    style={{ float: "right", margin: "0 1.5rem 1.5rem 0" }}
   />
 </a>
 
