--- a/docs/uso-meter/errores.mdx
+++ b/docs/uso-meter/errores.mdx
@@ -1,8 +1,8 @@
 # Errores
 
-<a href="/img/intro/app_push.jpg" target="_blank" rel="noreferrer">
+<a href="/img/errores/w_err.png" target="_blank" rel="noreferrer">
   <img
-    src="/img/intro/app_push.jpg"
+    src="/img/errores/w_err.png"
     alt="Mmeter – Errores y mensajes"
     className="mm-feature-img"
     style={{ float: "right", margin: "0 0 1.5rem 1.5rem" }}
@@ -103,22 +103,57 @@ Si se pierde la conexión, el comportamiento puede variar según la duración de
 - Esperar unos segundos y volver a intentar.
 - Si el problema persiste, reiniciar el equipo.
 
+<a
+  href="/video/err_w_cards.mp4"
+  target="_blank"
+  rel="noreferrer"
+  style={{
+    display: "inline-block",
+    position: "relative",
+    maxWidth: "260px",
+    margin: "1rem 0"
+  }}
+>
+  <img
+    src="/video/mmeter.jpg"
+    alt="Conectar Mmeter a Wi-Fi desde la app"
+    style={{
+      width: "100%",
+      borderRadius: "12px",
+      display: "block"
+    }}
+  />
+
+  {/* Botón Play */}
+  <div
+    style={{
+      position: "absolute",
+      top: "50%",
+      left: "50%",
+      transform: "translate(-50%, -50%)",
+      width: "56px",
+      height: "56px",
+      background: "rgba(0,0,0,0.6)",
+      borderRadius: "50%",
+      display: "flex",
+      alignItems: "center",
+      justifyContent: "center"
+    }}
+  >
+    <div
+      style={{
+        marginLeft: "4px",
+        width: 0,
+        height: 0,
+        borderTop: "10px solid transparent",
+        borderBottom: "10px solid transparent",
+        borderLeft: "16px solid white"
+      }}
+    />
+  </div>
+</a>
+
+
 ---
 
-## Video
 
-Aquí podés agregar un video mostrando:
-- cómo se ven los errores fatales,
-- colores del LED,
-- comportamiento cuando se pierde Blynk/Wi-Fi,
-- reinicio por WDT y recuperación.
-
-<iframe
-  width="100%"
-  height="400"
-  src="https://www.youtube.com/embed/YdloKCMfLUs"
-  title="Mmeter – Errores y señales del LED"
-  frameBorder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowFullScreen
-/>
