--- a/docs/ayuda/troubleshooting.mdx
+++ b/docs/ayuda/troubleshooting.mdx
@@ -2,7 +2,16 @@
 
 Problemas frecuentes y cómo resolverlos.
 
-- Error al compilar: revisar rutas de imágenes y componentes
-- Video no se ve: usar URL de embed `youtube.com/embed/...`
+- Error al compilar: revisar rutas de imágenes y componentes.
+- El video no se visualiza: usar una URL de tipo `youtube.com/embed/...`.
 
 Para mensajes de error del equipo, estados del LED y fallas de sensores, consultá la sección **[Errores](/docs/uso-meter/errores)**.
+
+---
+
+## Consultas técnicas
+
+Si el problema persiste o tenés alguna consulta técnica adicional, escribinos a:
+
+📧 **education.ta@gmail.com**
+
