--- a/docs/config-avanzada/calibracion.mdx
+++ b/docs/config-avanzada/calibracion.mdx
@@ -260,6 +260,56 @@ la referencia deja de ser válida y **conviene recalibrar**.
 
 ---
 
+<a
+  href="/video/cal_ok.mp4"
+  target="_blank"
+  rel="noreferrer"
+  style={{
+    display: "inline-block",
+    position: "relative",
+    maxWidth: "260px",
+    margin: "1rem 0"
+  }}
+>
+  <img
+    src="/video/cal_ok.png"
+    alt="Conectar Mmeter a Wi-Fi desde la app"
+    style={{
+      width: "100%",
+      borderRadius: "12px",
+      display: "block"
+    }}
+  />
+
+  {/* Botón Play */}
+  <div
+    style={{
+      position: "absolute",
+      top: "50%",
+      left: "50%",
+      transform: "translate(-50%, -50%)",
+      width: "56px",
+      height: "56px",
+      background: "rgba(0,0,0,0.6)",
+      borderRadius: "50%",
+      display: "flex",
+      alignItems: "center",
+      justifyContent: "center"
+    }}
+  >
+    <div
+      style={{
+        marginLeft: "4px",
+        width: 0,
+        height: 0,
+        borderTop: "10px solid transparent",
+        borderBottom: "10px solid transparent",
+        borderLeft: "16px solid white"
+      }}
+    />
+  </div>
+</a>
+
 ## Resumen
 
 - La calibración **no es obligatoria**.
